--- a/app/Resources/views/blog/post/show.html.twig
+++ b/app/Resources/views/blog/post/show.html.twig
@@ -8,4 +8,8 @@
         <a href="{{ path('post_list') }}">blog</a> |
         <a href="{{ path('post_update', { id: post.id }) }}">update</a>
     </p>
+    {{ render(controller('AcmeBlogBundle:Comment:list', { postId: post.id })) }}
+    <p>
+        <a href="{{ path('post_add_comment', { postId: post.id }) }}">add comment</a>
+    </p>
 {% endblock %}
