--- a/app/Resources/views/blog/post/list.html.twig
+++ b/app/Resources/views/blog/post/list.html.twig
@@ -7,8 +7,12 @@
             <h3>
                 <a href="{{ path('post', { id: post.id }) }}">{{ post.title }}</a>
             </h3>
-            <p>by {{ post.author }}</p>
+            <p>
+                by {{ post.author }}
+                in <a href="{{ path('post_list_by_category', { category: post.category.id }) }}">{{ post.category }}</a>
+            </p>
             {{ post.summary|raw }}
+            <p>{% for tag in post.tags %}<a href="{{ path('post_list_by_tag', { tag: tag.id }) }}">#{{ tag }}</a> {% endfor %}</p>
             <p>
                 <a href="{{ path('post_update', { id: post.id }) }}">update</a>
             </p>
