--- a/app/Resources/views/blog/post/show.html.twig
+++ b/app/Resources/views/blog/post/show.html.twig
@@ -2,8 +2,12 @@
 
 {% block body %}
     <h1>{{ post.title }}</h1>
-    <p>by {{ post.author }}</p>
+    <p>
+        by {{ post.author }}
+        in <a href="{{ path('post_list_by_category', { category: post.category.id }) }}">{{ post.category }}</a>
+    </p>
     {{ post.body|raw }}
+    <p>{% for tag in post.tags %}<a href="{{ path('post_list_by_tag', { tag: tag.id }) }}">#{{ tag }}</a> {% endfor %}</p>
     <p>
         <a href="{{ path('post_list') }}">blog</a> |
         <a href="{{ path('post_update', { id: post.id }) }}">update</a>
