--- a/app/Resources/views/blog/post/show.html.twig
+++ b/app/Resources/views/blog/post/show.html.twig
@@ -10,9 +10,9 @@
     <p>{% for tag in post.tags %}<a href="{{ path('post_list_by_tag', { tag: tag.id }) }}">#{{ tag }}</a> {% endfor %}</p>
     <p>
         <a href="{{ path('post_list') }}">blog</a> |
-        <a href="{{ path('post_update', { id: post.id }) }}">update</a>
+        <a href="{{ path('post_update', { postId: post.id }) }}">update</a>
     </p>
-    {{ render(controller('AcmeBlogBundle:Comment:list', { postId: post.id })) }}
+    {{ render(url('post_list_comment', { id: post.id })) }}
     <p>
         <a href="{{ path('post_add_comment', { postId: post.id }) }}">add comment</a>
     </p>
