--- a/app/Resources/views/homepage.html.twig
+++ b/app/Resources/views/homepage.html.twig
@@ -1,5 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <div>Count posts : {{ count.post }}</div>
     <div><a href="{{ path('post_list') }}">Post CRUD</a></div>
 {% endblock %}
