--- a/app/Resources/views/blog/post/_list.html.twig
+++ b/app/Resources/views/blog/post/_list.html.twig
@@ -1,19 +1,14 @@
-{% extends 'base.html.twig' %}
-
-{% block body %}
-    <h1>{{ post.title }}</h1>
+<div>
+    <h3>
+        <a href="{{ path('post', { id: post.id }) }}">{{ post.title }}</a>
+    </h3>
     <p>
         by <a href="{{ path('author', { id: post.author.id }) }}">{{ post.author }}</a>
         in <a href="{{ path('post_list_by_category', { category: post.category.id }) }}">{{ post.category }}</a>
     </p>
-    {{ post.body|raw }}
+    {{ post.summary|raw }}
     <p>{% for tag in post.tags %}<a href="{{ path('post_list_by_tag', { tag: tag.id }) }}">#{{ tag }}</a> {% endfor %}</p>
     <p>
-        <a href="{{ path('post_list') }}">blog</a> |
         <a href="{{ path('post_update', { id: post.id }) }}">update</a>
     </p>
-    {{ render(url('post_list_comment', { postId: post.id })) }}
-    <p>
-        <a href="{{ path('post_add_comment', { postId: post.id }) }}">add comment</a>
-    </p>
-{% endblock %}
+</div>
